manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs-netpol-bouncer
  namespace: security
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
      app.kubernetes.io/component: cs-netpol-bouncer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crowdsec
        app.kubernetes.io/component: cs-netpol-bouncer
    spec:
      containers:
        - name: cs-netpol-bouncer
          image: ghcr.io/fastlorenzo/cs-netpol-bouncer:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/ssl/crowdsec-bouncer
              name: crowdsec-bouncer-tls
          resources:
            limits:
              cpu: 150m
              memory: 100Mi
            requests:
              cpu: 150m
              memory: 100Mi
      restartPolicy: Always
      serviceAccountName: crowdsec
      volumes:
        - name: crowdsec-bouncer-tls
          secret:
            defaultMode: 420
            secretName: crowdsec-bouncer-tls
---
# Basic network policy to block specific ingress traffic from a specific source IP address
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crowdsec
  namespace: security
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.0.0.2/32
